--- a/_posts/2014-01-01-GOPC-List.md
+++ b/_posts/2014-01-01-GOPC-List.md
@@ -7,8 +7,8 @@ img: pic01.jpg
 tags: [醫療服務地圖]
 ---
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chrono-node@1.3.5/chrono.min.js"></script>
+<script src="{{ "/assets/js/chrono.min.js" | relative_url }}"></script>
+
 <!-- Google Maps API javascript -->
 
 <!-- Import the visualization javascript -->
