--- a/_posts/2013-05-05-GOPD.md
+++ b/_posts/2013-05-05-GOPD.md
@@ -6,12 +6,14 @@ level: 第二級
 img: pic01.jpg
 tags: [醫療服務地圖]
 ---
- <!-- Make sure you put this AFTER Leaflet's CSS -->
- <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
+<!-- Make sure you put this AFTER Leaflet's CSS -->
+<script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
    integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
    crossorigin=""></script>
+<script src="https://cdn.klokantech.com/mapbox-gl-js/v0.43.0/mapbox-gl.js"></script>
+<script src="https://cdn.klokantech.com/mapbox-gl-leaflet/latest/leaflet-mapbox-gl.js"></script>
  
- <div id="map_canvas"></div>
+<div id="map_canvas"></div>
  
  
 <script type="text/javascript"> 
@@ -24,7 +26,9 @@ tags: [醫療服務地圖]
  
    var mymap = L.map('map_canvas').setView([22.38269281766774, 114.10987863448963], 11);
    
-   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-   }).addTo(mymap);
+   L.mapboxGL('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '<a href="https://www.maptiler.com/license/maps/" target="_blank">© MapTiler</a> <a href="https://www.openstreetmap.org/copyright" target="_blank">© OpenStreetMap contributors</a>',
+        accessToken: 'not-needed',
+        style: 'https://maps.tilehosting.com/c/c2392ad1-e959-404a-b55d-5f0da0f052fb/styles/OPENMEDICSHK/style.json?key=vrdEIAaBrAhTaX6Y5X2r'
+      }).addTo(mymap);
 </script>
