Add location detection

--- a/_posts/2013-05-05-GOPD.md
+++ b/_posts/2013-05-05-GOPD.md
@@ -18,6 +18,8 @@ tags: [醫療服務地圖]
  
 <script type="text/javascript"> 
    var openPopup = null;
+   var userLat = "";
+   var userLng = "";
    var MyCustomMarker = L.Marker.extend({
  
     bindPopup: function(htmlContent, options) {
@@ -141,9 +143,27 @@ tags: [醫療服務地圖]
       var marker = new MyCustomMarker(new L.LatLng(lat, long));
         marker.bindPopup(
 		'<strong>'+nameTC+'</strong><br>'+
-		addressTC+'<br><a href="https://citymapper.com/directions?endcoord='+lat+'%2C'+long+'&endname='+nameTC+'&endaddress='+addressTC+' target='_blank' rel='noopener noreferrer' ">如何前往？</a>', 
+		addressTC+'<br><a href="https://citymapper.com/directions?startcoord='+userLat+','+userLng+'&endcoord='+lat+','+long+'&endname='+nameTC+'&endaddress='+addressTC+' target='_blank' rel='noopener noreferrer' ">如何前往？</a>', 
 	  { showOnMouseOver: true });
        markers.addLayer(marker);
    }
+   
+  function getLocation();
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(changePosition, function(e){ });
+    }
+  }
+
+  function changePosition(position){
+
+    if (position){
+      mymap.setZoom(13);
+      userLat = position.coords.latitude;
+      userLng = position.coords.longitude;
+      mymap.panTo(new L.LatLng(userLat, userLng));
+    }
+    
+  }
    mymap.addLayer(markers);
+   getLocation();
 </script>
