Upload from GAS

--- a/_HAhospital/10.md
+++ b/_HAhospital/10.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Hong Kong West Cluster
+institution_eng: Queen Mary Hospital
+with_AE_service_eng: Yes
+address_eng: 102 Pokfulam Road, HK
+cluster_tc: 港島西醫院聯網
+institution_tc: 瑪麗醫院
+with_AE_service_tc: 是
+address_tc: 香港薄扶林道 102 號
+cluster_sc: 港岛西医院联网
+institution_sc: 玛丽医院
+with_AE_service_sc: 是
+address_sc: 香港薄扶林道102 号
+latitude: 22.270429456
+longitude: 114.13048628
+Slug: 6j2gvrxbgo
+---
