--- a/_HAhospital/11.md
+++ b/_HAhospital/11.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Hong Kong West Cluster
+institution_eng: The Duchess of Kent Children's Hospital at Sandy Bay
+with_AE_service_eng: No
+address_eng: 12 Sandy Bay Road, Pokfulam, HK
+cluster_tc: 港島西醫院聯網
+institution_tc: 大口環根德公爵夫人兒童醫院
+with_AE_service_tc: 否
+address_tc: 香港薄扶林大口環道 12 號
+cluster_sc: 港岛西医院联网
+institution_sc: 大口环根德公爵夫人儿童医院
+with_AE_service_sc: 否
+address_sc: 香港薄扶林大口环道12 号
+latitude: 22.271493113
+longitude: 114.12406277
+Slug: iw8ftqvhgc
+---
