--- a/_HAhospital/12.md
+++ b/_HAhospital/12.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Hong Kong West Cluster
+institution_eng: Tsan Yuk Hospital
+with_AE_service_eng: No
+address_eng: 30 Hospital Road, Sai Ying Pun, HK
+cluster_tc: 港島西醫院聯網
+institution_tc: 贊育醫院
+with_AE_service_tc: 否
+address_tc: 香港西營盤醫院道 30 號
+cluster_sc: 港岛西医院联网
+institution_sc: 赞育医院
+with_AE_service_sc: 否
+address_sc: 香港西营盘医院道30 号
+latitude: 22.286236478
+longitude: 114.1445514
+Slug: k2yp62akz5
+---
