--- a/_HAhospital/15.md
+++ b/_HAhospital/15.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon Central Cluster
+institution_eng: Hong Kong Buddhist Hospital
+with_AE_service_eng: No
+address_eng: 10 Heng Lam Street, Lok Fu, KLN
+cluster_tc: 九龍中醫院聯網
+institution_tc: 香港佛教醫院
+with_AE_service_tc: 否
+address_tc: 九龍樂富杏林街 10 號
+cluster_sc: 九龙中医院联网
+institution_sc: 香港佛教医院
+with_AE_service_sc: 否
+address_sc: 九龙乐富杏林街10 号
+latitude: 22.33554635
+longitude: 114.1886976
+Slug: 7gofaudwpd
+---
