--- a/_HAhospital/16.md
+++ b/_HAhospital/16.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon Central Cluster
+institution_eng: Hong Kong Children's Hospital
+with_AE_service_eng: No
+address_eng: 1 Shing Cheong Road, Kowloon
+cluster_tc: 九龍中醫院聯網
+institution_tc: 香港兒童醫院
+with_AE_service_tc: 否
+address_tc: 九龍承昌道一號
+cluster_sc: 九龙中医院联网
+institution_sc: 香港儿童医院
+with_AE_service_sc: 否
+address_sc: 九龙承昌道一号
+latitude: 22.315748572
+longitude: 114.2088644
+Slug: mcm6wr6h5a
+---
