--- a/_HAhospital/17.md
+++ b/_HAhospital/17.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon Central Cluster
+institution_eng: Hong Kong Eye Hospital
+with_AE_service_eng: No
+address_eng: 147K Argyle Street, KLN
+cluster_tc: 九龍中醫院聯網
+institution_tc: 香港眼科醫院
+with_AE_service_tc: 否
+address_tc: 九龍亞皆老街 147K
+cluster_sc: 九龙中医院联网
+institution_sc: 香港眼科医院
+with_AE_service_sc: 否
+address_sc: 九龙亚皆老街147K
+latitude: 22.324926632
+longitude: 114.18462003
+Slug: krt8jo5bii
+---
