--- a/_HAhospital/18.md
+++ b/_HAhospital/18.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon Central Cluster
+institution_eng: Hong Kong Red Cross Blood Transfusion Service
+with_AE_service_eng: No
+address_eng: 15 King's Park Rise, KLN
+cluster_tc: 九龍中醫院聯網
+institution_tc: 香港紅十字會輸血服務中心
+with_AE_service_tc: 否
+address_tc: 九龍京士柏道 15 號
+cluster_sc: 九龙中医院联网
+institution_sc: 香港红十字会输血服务中心
+with_AE_service_sc: 否
+address_sc: 九龙京士柏道15 号
+latitude: 22.310622338
+longitude: 114.17448684
+Slug: dhaq9bvvjm
+---
