--- a/_HAhospital/19.md
+++ b/_HAhospital/19.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon Central Cluster
+institution_eng: Kowloon Hospital
+with_AE_service_eng: No
+address_eng: 147A Argyle Street, KLN
+cluster_tc: 九龍中醫院聯網
+institution_tc: 九龍醫院
+with_AE_service_tc: 否
+address_tc: 九龍亞皆老街 147A
+cluster_sc: 九龙中医院联网
+institution_sc: 九龙医院
+with_AE_service_sc: 否
+address_sc: 九龙亚皆老街147A
+latitude: 22.323707665
+longitude: 114.17966006
+Slug: w6x588247e
+---
