--- a/_HAhospital/20.md
+++ b/_HAhospital/20.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon Central Cluster
+institution_eng: Kwong Wah Hospital
+with_AE_service_eng: Yes
+address_eng: 25 Waterloo Road, KLN
+cluster_tc: 九龍中醫院聯網
+institution_tc: 廣華醫院
+with_AE_service_tc: 是
+address_tc: 九龍窩打老道 25 號
+cluster_sc: 九龙中医院联网
+institution_sc: 广华医院
+with_AE_service_sc: 是
+address_sc: 九龙窝打老道25 号
+latitude: 22.315173719
+longitude: 114.17243887
+Slug: mmzq3eh1wc
+---
