--- a/_HAhospital/21.md
+++ b/_HAhospital/21.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon Central Cluster
+institution_eng: Our Lady of Maryknoll Hospital
+with_AE_service_eng: No
+address_eng: 118 Shatin Pass Road, Wong Tai Sin, KLN
+cluster_tc: 九龍中醫院聯網
+institution_tc: 聖母醫院
+with_AE_service_tc: 否
+address_tc: 九龍黃大仙沙田坳道 118 號
+cluster_sc: 九龙中医院联网
+institution_sc: 圣母医院
+with_AE_service_sc: 否
+address_sc: 九龙黄大仙沙田坳道 118 号
+latitude: 22.345587576
+longitude: 114.19657146
+Slug: 6toj32to8q
+---
