--- a/_HAhospital/22.md
+++ b/_HAhospital/22.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon Central Cluster
+institution_eng: Queen Elizabeth Hospital
+with_AE_service_eng: Yes
+address_eng: 30 Gascoigne Road, KLN
+cluster_tc: 九龍中醫院聯網
+institution_tc: 伊利沙伯醫院
+with_AE_service_tc: 是
+address_tc: 九龍加士居道30號
+cluster_sc: 九龙中医院联网
+institution_sc: 伊利沙伯医院
+with_AE_service_sc: 是
+address_sc: 九龙加士居道30号
+latitude: 22.309060045
+longitude: 114.17464215
+Slug: garugxqf14
+---
