--- a/_HAhospital/23.md
+++ b/_HAhospital/23.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon Central Cluster
+institution_eng: Tung Wah Group of Hospitals Wong Tai Sin Hospital
+with_AE_service_eng: No
+address_eng: 124 Shatin Pass Road, Wong Tai Sin, KLN
+cluster_tc: 九龍中醫院聯網
+institution_tc: 東華三院黃大仙醫院
+with_AE_service_tc: 否
+address_tc: 九龍黃大仙沙田坳道124號
+cluster_sc: 九龙中医院联网
+institution_sc: 东华三院黄大仙医院
+with_AE_service_sc: 否
+address_sc: 九龙黄大仙沙田坳道124号
+latitude: 22.346716428
+longitude: 114.19631921
+Slug: jrfdtg77a9
+---
