--- a/_HAhospital/24.md
+++ b/_HAhospital/24.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon East Cluster
+institution_eng: Haven of Hope Hospital
+with_AE_service_eng: No
+address_eng: 8 Haven of Hope Road, Tseung Kwan O, KLN
+cluster_tc: 九龍東醫院聯網
+institution_tc: 靈實醫院
+with_AE_service_tc: 否
+address_tc: 九龍將軍澳靈實路 8 號
+cluster_sc: 九龙东医院联网
+institution_sc: 灵实医院
+with_AE_service_sc: 否
+address_sc: 九龙将军澳灵实路8 号
+latitude: 22.313772642
+longitude: 114.25626599
+Slug: s5yciz7bie
+---
