--- a/_HAhospital/25.md
+++ b/_HAhospital/25.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon East Cluster
+institution_eng: Tseung Kwan O Hospital
+with_AE_service_eng: Yes
+address_eng: No. 2 Po Ning Lane, Hang Hau, Tseung Kwan O
+cluster_tc: 九龍東醫院聯網
+institution_tc: 將軍澳醫院
+with_AE_service_tc: 是
+address_tc: 將軍澳坑口寶寧里 2 號
+cluster_sc: 九龙东医院联网
+institution_sc: 将军澳医院
+with_AE_service_sc: 是
+address_sc: 将军澳坑口宝宁里 2 号
+latitude: 22.318262454
+longitude: 114.27019647
+Slug: 64qthz61s7
+---
