--- a/_HAhospital/26.md
+++ b/_HAhospital/26.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon East Cluster
+institution_eng: United Christian Hospital
+with_AE_service_eng: Yes
+address_eng: 130 Hip Wo Street, Kwun Tong, KLN
+cluster_tc: 九龍東醫院聯網
+institution_tc: 基督教聯合醫院
+with_AE_service_tc: 是
+address_tc: 九龍觀塘協和街 130 號
+cluster_sc: 九龙东医院联网
+institution_sc: 基督教联合医院
+with_AE_service_sc: 是
+address_sc: 九龙观塘协和街130 号
+latitude: 22.322245721
+longitude: 114.22789967
+Slug: oqh9ihub3o
+---
