--- a/_HAhospital/27.md
+++ b/_HAhospital/27.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon West Cluster
+institution_eng: Caritas Medical Centre
+with_AE_service_eng: Yes
+address_eng: 111 Wing Hong Street, Sham Shui Po
+cluster_tc: 九龍西醫院聯網
+institution_tc: 明愛醫院
+with_AE_service_tc: 是
+address_tc: 九龍深水埗永康街 111 號
+cluster_sc: 九龙西医院联网
+institution_sc: 明爱医院
+with_AE_service_sc: 是
+address_sc: 九龙深水埗永康街111 号
+latitude: 22.340674346
+longitude: 114.1526543
+Slug: fa1uk65d7t
+---
