--- a/_HAhospital/28.md
+++ b/_HAhospital/28.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon West Cluster
+institution_eng: Kwai Chung Hospital
+with_AE_service_eng: No
+address_eng: 3-15 Kwai Chung Hospital Road, NT
+cluster_tc: 九龍西醫院聯網
+institution_tc: 葵涌醫院
+with_AE_service_tc: 否
+address_tc: 新界葵涌醫院道 3-15 號
+cluster_sc: 九龙西医院联网
+institution_sc: 葵涌医院
+with_AE_service_sc: 否
+address_sc: 新界葵涌医院道 3-15 号
+latitude: 22.342927935
+longitude: 114.13326785
+Slug: 3cswk5rtgw
+---
