--- a/_HAhospital/29.md
+++ b/_HAhospital/29.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon West Cluster
+institution_eng: North Lantau Hospital
+with_AE_service_eng: Yes
+address_eng: 8 Chung Yan Road, Tung Chung, Lantau
+cluster_tc: 九龍西醫院聯網
+institution_tc: 北大嶼山醫院
+with_AE_service_tc: 是
+address_tc: 大嶼山東涌松仁路8號
+cluster_sc: 九龙西医院联网
+institution_sc: 北大屿山医院
+with_AE_service_sc: 是
+address_sc: 大屿山东涌松仁路8号
+latitude: 22.282570845
+longitude: 113.93914094
+Slug: s16mw45n4r
+---
