--- a/_HAhospital/3.md
+++ b/_HAhospital/3.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Hong Kong East Cluster
+institution_eng: Ruttonjee Hospital
+with_AE_service_eng: Yes
+address_eng: 266 Queen's Road East, Wan Chai, HK
+cluster_tc: 港島東醫院聯網
+institution_tc: 律敦治醫院
+with_AE_service_tc: 是
+address_tc: 香港灣仔皇后大道東 266 號
+cluster_sc: 港岛东医院联网
+institution_sc: 律敦治医院
+with_AE_service_sc: 是
+address_sc: 香港湾仔皇后大道东 266 号
+latitude: 22.275908631
+longitude: 114.17529276
+Slug: bubjcozpkh
+---
