--- a/_HAhospital/30.md
+++ b/_HAhospital/30.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon West Cluster
+institution_eng: Princess Margaret Hospital
+with_AE_service_eng: Yes
+address_eng: 2-10 Princess Margaret Hospital Road, Lai Chi Kok, Kowloon
+cluster_tc: 九龍西醫院聯網
+institution_tc: 瑪嘉烈醫院
+with_AE_service_tc: 是
+address_tc: 九龍荔枝角瑪嘉烈醫院道2-10號
+cluster_sc: 九龙西医院联网
+institution_sc: 玛嘉烈医院
+with_AE_service_sc: 是
+address_sc: 九龙荔枝角玛嘉烈医院道2-10号
+latitude: 22.340146901
+longitude: 114.13470541
+Slug: xyt17hxwrm
+---
