--- a/_HAhospital/31.md
+++ b/_HAhospital/31.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Kowloon West Cluster
+institution_eng: Yan Chai Hospital
+with_AE_service_eng: Yes
+address_eng: 7-11 Yan Chai Street, Tsuen Wan, NT
+cluster_tc: 九龍西醫院聯網
+institution_tc: 仁濟醫院
+with_AE_service_tc: 是
+address_tc: 新界荃灣仁濟街 7-11 號
+cluster_sc: 九龙西医院联网
+institution_sc: 仁济医院
+with_AE_service_sc: 是
+address_sc: 新界荃湾仁济街 7-11 号
+latitude: 22.369482469
+longitude: 114.11942365
+Slug: b6ykzg8bmk
+---
