--- a/_HAhospital/33.md
+++ b/_HAhospital/33.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: New Territories East Cluster
+institution_eng: Bradbury Hospice
+with_AE_service_eng: No
+address_eng: 17 A Kung Kok Shan Road, Shatin, NT
+cluster_tc: 新界東醫院聯網
+institution_tc: 白普理寧養中心
+with_AE_service_tc: 否
+address_tc: 新界沙田亞公角山路 17 號
+cluster_sc: 新界东医院联网
+institution_sc: 白普理宁养中心
+with_AE_service_sc: 否
+address_sc: 新界沙田亚公角山路17 号
+latitude: 22.398512223
+longitude: 114.21509866
+Slug: zi67adqtf6
+---
