--- a/_HAhospital/34.md
+++ b/_HAhospital/34.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: New Territories East Cluster
+institution_eng: Cheshire Home, Shatin
+with_AE_service_eng: No
+address_eng: 30 A Kung Kok Shan Road, Shatin, NT
+cluster_tc: 新界東醫院聯網
+institution_tc: 沙田慈氏護養院
+with_AE_service_tc: 否
+address_tc: 新界沙田亞公角山路 30 號
+cluster_sc: 新界东医院联网
+institution_sc: 沙田慈氏护养院
+with_AE_service_sc: 否
+address_sc: 新界沙田亚公角山路30 号
+latitude: 22.399180136
+longitude: 114.21652643
+Slug: 8ue44646ib
+---
