--- a/_HAhospital/35.md
+++ b/_HAhospital/35.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: New Territories East Cluster
+institution_eng: North District Hospital
+with_AE_service_eng: Yes
+address_eng: 9 Po Kin Road, Sheung Shui, NT
+cluster_tc: 新界東醫院聯網
+institution_tc: 北區醫院
+with_AE_service_tc: 是
+address_tc: 新界上水保健路9號
+cluster_sc: 新界东医院联网
+institution_sc: 北区医院
+with_AE_service_sc: 是
+address_sc: 新界上水保健路9号
+latitude: 22.496831828
+longitude: 114.12456081
+Slug: nrbdc1bm64
+---
