--- a/_HAhospital/36.md
+++ b/_HAhospital/36.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: New Territories East Cluster
+institution_eng: Prince of Wales Hospital
+with_AE_service_eng: Yes
+address_eng: 30-32 Ngan Shing Street, Shatin, NT
+cluster_tc: 新界東醫院聯網
+institution_tc: 威爾斯親王醫院
+with_AE_service_tc: 是
+address_tc: 新界沙田銀城街 30-32 號
+cluster_sc: 新界东医院联网
+institution_sc: 威尔斯亲王医院
+with_AE_service_sc: 是
+address_sc: 新界沙田银城街30-32 号
+latitude: 22.379749496
+longitude: 114.20123714
+Slug: hji1cqg91n
+---
