--- a/_HAhospital/40.md
+++ b/_HAhospital/40.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: New Territories West Cluster
+institution_eng: Pok Oi Hospital
+with_AE_service_eng: Yes
+address_eng: Au Tau, Yuen Long, NT
+cluster_tc: 新界西醫院聯網
+institution_tc: 博愛醫院
+with_AE_service_tc: 是
+address_tc: 新界元朗坳頭
+cluster_sc: 新界西医院联网
+institution_sc: 博爱医院
+with_AE_service_sc: 是
+address_sc: 新界元朗坳头
+latitude: 22.445400365
+longitude: 114.0413931
+Slug: pjpbhu65yr
+---
