--- a/_HAhospital/43.md
+++ b/_HAhospital/43.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: New Territories West Cluster
+institution_eng: Tuen Mun Hospital
+with_AE_service_eng: Yes
+address_eng: 23 Tsing Chung Koon Road, Tuen Mun, NT
+cluster_tc: 新界西醫院聯網
+institution_tc: 屯門醫院
+with_AE_service_tc: 是
+address_tc: 新界屯門青松觀路廿三號
+cluster_sc: 新界西医院联网
+institution_sc: 屯门医院
+with_AE_service_sc: 是
+address_sc: 新界屯门青松观路廿三号
+latitude: 22.407224105
+longitude: 113.9762333
+Slug: fh8k5bvrts
+---
