--- a/_HAhospital/6.md
+++ b/_HAhospital/6.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Hong Kong East Cluster
+institution_eng: Tung Wah Eastern Hospital
+with_AE_service_eng: No
+address_eng: 19 Eastern Hospital Road, Causeway Bay, HK
+cluster_tc: 港島東醫院聯網
+institution_tc: 東華東院
+with_AE_service_tc: 否
+address_tc: 香港銅鑼灣東院道 19 號
+cluster_sc: 港岛东医院联网
+institution_sc: 东华东院
+with_AE_service_sc: 否
+address_sc: 香港铜锣湾东院道19 号
+latitude: 22.274725068
+longitude: 114.19026433
+Slug: vvf9eegmhp
+---
