--- a/_HAhospital/8.md
+++ b/_HAhospital/8.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Hong Kong West Cluster
+institution_eng: Grantham Hospital
+with_AE_service_eng: No
+address_eng: 125 Wong Chuk Hang Road, Aberdeen, HK
+cluster_tc: 港島西醫院聯網
+institution_tc: 葛量洪醫院
+with_AE_service_tc: 否
+address_tc: 香港仔黃竹坑道125號
+cluster_sc: 港岛西医院联网
+institution_sc: 葛量洪医院
+with_AE_service_sc: 否
+address_sc: 香港仔黄竹坑道125号
+latitude: 22.25129103
+longitude: 114.17326547
+Slug: zeki27dgyf
+---
