--- a/_HAhospital/9.md
+++ b/_HAhospital/9.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Hong Kong West Cluster
+institution_eng: MacLehose Medical Rehabilitation Centre
+with_AE_service_eng: No
+address_eng: 7 Sha Wan Drive, Pokfulam, HK
+cluster_tc: 港島西醫院聯網
+institution_tc: 麥理浩復康院
+with_AE_service_tc: 否
+address_tc: 香港薄扶林沙灣徑 7 號
+cluster_sc: 港岛西医院联网
+institution_sc: 麦理浩复康院
+with_AE_service_sc: 否
+address_sc: 香港薄扶林沙湾径7 号
+latitude: 22.269795326
+longitude: 114.12398579
+Slug: awgxbhmk9v
+---
