--- a/_HAhospital/1.md
+++ b/_HAhospital/1.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Hong Kong East Cluster
+institution_eng: Cheshire Home, Chung Hom Kok
+with_AE_service_eng: No
+address_eng: 128 Chung Hom Kok Road, HK
+cluster_tc: 港島東醫院聯網
+institution_tc: 舂磡角慈氏護養院
+with_AE_service_tc: 否
+address_tc: 香港舂磡角道128號
+cluster_sc: 港岛东医院联网
+institution_sc: 舂磡角慈氏护养院
+with_AE_service_sc: 否
+address_sc: 香港舂磡角道128号
+latitude: 22.212024334
+longitude: 114.19729951
+Slug: ao6g1bgofj
+---
