--- a/_HAhospital/13.md
+++ b/_HAhospital/13.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Hong Kong West Cluster
+institution_eng: Tung Wah Group of Hospitals Fung Yiu King Hospital
+with_AE_service_eng: No
+address_eng: 9 Sandy Bay Road, Pokfulam, Hong Kong
+cluster_tc: 港島西醫院聯網
+institution_tc: 東華三院馮堯敬醫院
+with_AE_service_tc: 否
+address_tc: 香港薄扶林大口環道９號
+cluster_sc: 港岛西医院联网
+institution_sc: 东华三院冯尧敬医院
+with_AE_service_sc: 否
+address_sc: 香港薄扶林大口环道９号
+latitude: 22.27140306
+longitude: 114.12484872
+Slug: ru9uptas5r
+---
