--- a/_HAhospital/14.md
+++ b/_HAhospital/14.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Hong Kong West Cluster
+institution_eng: Tung Wah Hospital
+with_AE_service_eng: No
+address_eng: 12 Po Yan Street, Sheung Wan, HK
+cluster_tc: 港島西醫院聯網
+institution_tc: 東華醫院
+with_AE_service_tc: 否
+address_tc: 香港上環普仁街 12 號
+cluster_sc: 港岛西医院联网
+institution_sc: 东华医院
+with_AE_service_sc: 否
+address_sc: 香港上环普仁街12 号
+latitude: 22.285144231
+longitude: 114.14694844
+Slug: sh45ujzfn8
+---
