--- a/_HAhospital/37.md
+++ b/_HAhospital/37.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: New Territories East Cluster
+institution_eng: Shatin Hospital
+with_AE_service_eng: No
+address_eng: 33 A Kung Kok Street, Ma On Shan, Shatin, NT
+cluster_tc: 新界東醫院聯網
+institution_tc: 沙田醫院
+with_AE_service_tc: 否
+address_tc: 新界沙田馬鞍山亞公角街 33 號
+cluster_sc: 新界东医院联网
+institution_sc: 沙田医院
+with_AE_service_sc: 否
+address_sc: 新界沙田马鞍山亚公角街33 号
+latitude: 22.398115435
+longitude: 114.2126804
+Slug: 1i4pysiqjm
+---
