--- a/_HAhospital/38.md
+++ b/_HAhospital/38.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: New Territories East Cluster
+institution_eng: Tai Po Hospital
+with_AE_service_eng: No
+address_eng: 9 Chuen On Road, Tai Po, NT
+cluster_tc: 新界東醫院聯網
+institution_tc: 大埔醫院
+with_AE_service_tc: 否
+address_tc: 新界大埔全安路 9 號
+cluster_sc: 新界东医院联网
+institution_sc: 大埔医院
+with_AE_service_sc: 否
+address_sc: 新界大埔全安路9 号
+latitude: 22.461269483
+longitude: 114.17463005
+Slug: 7y7h7fhxhh
+---
