--- a/_HAhospital/39.md
+++ b/_HAhospital/39.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: New Territories West Cluster
+institution_eng: Castle Peak Hospital
+with_AE_service_eng: No
+address_eng: 15 Tsing Chung Koon Road, Tuen Mun, NT
+cluster_tc: 新界西醫院聯網
+institution_tc: 青山醫院
+with_AE_service_tc: 否
+address_tc: 新界屯門青松觀路 15 號
+cluster_sc: 新界西医院联网
+institution_sc: 青山医院
+with_AE_service_sc: 否
+address_sc: 新界屯门青松观路15 号
+latitude: 22.41007457
+longitude: 113.97370404
+Slug: p3symjs81f
+---
