--- a/_HAhospital/4.md
+++ b/_HAhospital/4.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Hong Kong East Cluster
+institution_eng: St. John Hospital
+with_AE_service_eng: Yes
+address_eng: Cheung Chau Hospital Road, Tung Wan, Cheung Chau
+cluster_tc: 港島東醫院聯網
+institution_tc: 長洲醫院
+with_AE_service_tc: 是
+address_tc: 長洲東灣長洲醫院路
+cluster_sc: 港岛东医院联网
+institution_sc: 长洲医院
+with_AE_service_sc: 是
+address_sc: 长洲东湾长洲医院路
+latitude: 22.208059492
+longitude: 114.03150671
+Slug: 7q4z75v5qx
+---
