--- a/_HAhospital/41.md
+++ b/_HAhospital/41.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: New Territories West Cluster
+institution_eng: Siu Lam Hospital
+with_AE_service_eng: No
+address_eng: 15 Tsing Chung Koon Road, Tuen Mun, N.T.
+cluster_tc: 新界西醫院聯網
+institution_tc: 小欖醫院
+with_AE_service_tc: 否
+address_tc: 新界屯門青松觀路 15 號
+cluster_sc: 新界西医院联网
+institution_sc: 小榄医院
+with_AE_service_sc: 否
+address_sc: 新界屯门青松观路 15 号
+latitude: 22.410049072
+longitude: 113.97497637
+Slug: jn2udccay7
+---
