--- a/_HAhospital/42.md
+++ b/_HAhospital/42.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: New Territories West Cluster
+institution_eng: Tin Shui Wai Hospital
+with_AE_service_eng: Yes
+address_eng: 11 Tin Tan Street, Tin Shui Wai, New Territories
+cluster_tc: 新界西醫院聯網
+institution_tc: 天水圍醫院
+with_AE_service_tc: 是
+address_tc: 新界天水圍天壇街11號
+cluster_sc: 新界西医院联网
+institution_sc: 天水围医院
+with_AE_service_sc: 是
+address_sc: 新界天水围天坛街11号
+latitude: 22.458711703
+longitude: 113.9958431
+Slug: to2gt1nx99
+---
