--- a/_HAhospital/5.md
+++ b/_HAhospital/5.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Hong Kong East Cluster
+institution_eng: Tang Shiu Kin Hospital
+with_AE_service_eng: No
+address_eng: 282 Queen's Road East, Wan Chai, HK
+cluster_tc: 港島東醫院聯網
+institution_tc: 鄧肇堅醫院
+with_AE_service_tc: 否
+address_tc: 香港灣仔皇后大道東 282 號
+cluster_sc: 港岛东医院联网
+institution_sc: 邓肇坚医院
+with_AE_service_sc: 否
+address_sc: 香港湾仔皇后大道东 282 号
+latitude: 22.275475165
+longitude: 114.1776991
+Slug: pqqpsjvofk
+---
