--- a/_HAhospital/7.md
+++ b/_HAhospital/7.md
@@ -1,1 +1,17 @@
-undefined
+---
+cluster_eng: Hong Kong East Cluster
+institution_eng: Wong Chuk Hang Hospital
+with_AE_service_eng: No
+address_eng: 2 Wong Chuk Hang Path, Wong Chuk Hang, HK
+cluster_tc: 港島東醫院聯網
+institution_tc: 黃竹坑醫院
+with_AE_service_tc: 否
+address_tc: 香港黃竹坑黃竹坑徑 2 號
+cluster_sc: 港岛东医院联网
+institution_sc: 黄竹坑医院
+with_AE_service_sc: 否
+address_sc: 香港黄竹坑黄竹坑径2 号
+latitude: 22.250965962
+longitude: 114.17591391
+Slug: 6we8t9hrox
+---
