Upload from GAS

--- a/_HAhospital/1.md
+++ b/_HAhospital/1.md
@@ -14,4 +14,6 @@ address_sc: 香港舂磡角道128号
 latitude: 22.212024334
 longitude: 114.19729951
 Slug: ao6g1bgofj
+short_description_tc: 為需要長期護理的病人提供護養服務。
+long_description_tc: 舂磡角慈氏護養院於1961年成立，透過醫務社工、醫管局中央輪候冊及東華東院轉介肢體傷殘人士和長期病患者，為他們提供延續護理服務。護養院為慈氏國際基金會 (香港區) 成員。
 ---
