--- a/_HAhospital/17.md
+++ b/_HAhospital/17.md
@@ -14,4 +14,6 @@ address_sc: 九龙亚皆老街147K
 latitude: 22.324926632
 longitude: 114.18462003
 Slug: krt8jo5bii
+short_description_tc: 專科醫院，提供眼科的專科服務。
+long_description_tc: 香港眼科醫院於1992年啟用，前身為油麻地眼科中心，為廣大市民提供第二級和第三級眼科轉介服務。香港中文大學眼科及視覺科學學系設於本院內，與醫院的臨床服務結合，為香港中文大學的醫科學生提供眼科訓練。香港眼科醫院為家庭醫科醫生、醫科學生、護士學生、視光學生及私家醫生提供培訓。
 ---
