--- a/_HAhospital/12.md
+++ b/_HAhospital/12.md
@@ -14,4 +14,6 @@ address_sc: 香港西营盘医院道30 号
 latitude: 22.286236478
 longitude: 114.1445514
 Slug: k2yp62akz5
+short_description_tc: 一所社區家庭健康中心。
+long_description_tc: 贊育醫院於1922年由倫敦傳教士創立，旨在為社區提供產科服務，其後成為一所公立醫院，以及香港大學的教學醫院，為醫生提供訓練和研究；亦為學護提供產科訓練。醫院現已成為日間中心，為病人提供產前及產後護理，並推行多個健康教育計劃，包括如何照顧新生嬰兒、懷孕女性的飲食以及家庭計劃等。此外，贊育醫院亦增設社康護理與專職醫療及精神科復康服務。
 ---
