--- a/_HAhospital/19.md
+++ b/_HAhospital/19.md
@@ -14,4 +14,6 @@ address_sc: 九龙亚皆老街147A
 latitude: 22.323707665
 longitude: 114.17966006
 Slug: w6x588247e
+short_description_tc: 多種專科醫院，提供精神科、康復科和呼吸內科的急症及延續護理服務，以及療養護理和社區外展服務。
+long_description_tc: 九龍醫院提供多個專科的急症和延續護理服務，更具有本港其中一所最大型的胸肺專科中心，同時為伊利沙伯醫院和基督教聯合醫院康復中的病人，提供延續護理服務。九龍醫院是全港首數間設立康復科部門的醫院之一，也是首間提供胸肺康復計劃、精神科老人日間醫院和藥物濫用診所的醫院。醫院現正分階段進行翻新和重建，以便提供更多全面的服務，滿足社會大眾的醫療需求。此外，醫院同時開展多項社區外展計劃。
 ---
