--- a/_HAhospital/22.md
+++ b/_HAhospital/22.md
@@ -14,4 +14,13 @@ address_sc: 九龙加士居道30号
 latitude: 22.309060045
 longitude: 114.17464215
 Slug: garugxqf14
+short_description_tc: 大型急症醫院，提供 24 小時全面醫療服務。
+long_description_tc: 伊利沙伯醫院（伊院）於1963年啟用，是急症全科醫院，病床逾2,000張，職員約7,000名，提供24小時急症室服務，共設15個臨床部門、3間專
+科診所、及6間普通科門診診所。 
+
+伊院為各個臨床專科的病人提供高層次及高強度護理，亦在許多所設的臨床專科中，扮演著第三層專介中心的角色，特別是癌症科、胸肺及心臟科、腦神經科、及愛滋病科。 
+
+伊院是醫生、護士及專職醫療人員的基本及研究生訓練的教學中心，與各有關的大專院校關係密切。 
+
+伊院與公共及其他醫護機構合作，為本港開創了數個健康服務及專業發展，如病人資源中心、青少年醫療中心、醫院義工服務、護理教育、公眾健康教育等。
 ---
