--- a/_HAhospital/32.md
+++ b/_HAhospital/32.md
@@ -14,4 +14,8 @@ address_sc: 新界大埔全安路11 号
 latitude: 22.458605506
 longitude: 114.17481469
 Slug: 65mgh2tfj7
+short_description_tc: 位於大埔的急症全科醫院。
+long_description_tc: 雅麗氏何妙齡那打素醫院於1887年由前倫敦傳道會成立，是一所急症全科醫院，以基督教理念為本，為市民提供醫療服務。此外，這也是本港首間採用西醫療法的華人醫院。
+
+1997年，醫院遷至大埔，時至今日，為該區居民提供醫療服務。
 ---
