--- a/_HAhospital/35.md
+++ b/_HAhospital/35.md
@@ -14,4 +14,6 @@ address_sc: 新界上水保健路9号
 latitude: 22.496831828
 longitude: 114.12456081
 Slug: nrbdc1bm64
+short_description_tc: 住於北區的急症全科醫院。
+long_description_tc: 北區醫院旨在為人口增長迅速的新界北區提供醫療服務，切合居民所需。醫院於1998年分階段運作，提供門診和住院服務，尤其著重日間治療以及社區外展服務。北區醫院慈善信託基金於2007年6月成立，支援醫院改善區內公眾的生理和精神健康。
 ---
