--- a/_HAhospital/39.md
+++ b/_HAhospital/39.md
@@ -14,4 +14,7 @@ address_sc: 新界屯门青松观路15 号
 latitude: 22.41007457
 longitude: 113.97370404
 Slug: p3symjs81f
+short_description_tc: 提供全面的精神科服務，包括第四層法醫精神科服務。
+long_description_tc: 青山醫院於1961年成立，是本港歷史最悠久的精神科醫院，為新界居民提供精神科住院服務，並管理多間精神科診所和日間醫院。此外，醫院亦為其他醫院的住院病人提供諮詢服務。除了一般精神科治療外，醫院並提供多項相關的專科服務和復康計劃。青山醫院是現時全港唯一設有精神法醫科的醫院，為研究生提供精神科訓練、臨床心理學和職業治療的實習訓練，並為精神科護士提供訓練。醫院透過舉辦定期的教育活動，加強社區對精神健康的認知和了解。
+
 ---
