--- a/_HAhospital/43.md
+++ b/_HAhospital/43.md
@@ -14,4 +14,6 @@ address_sc: 新界屯门青松观路廿三号
 latitude: 22.407224105
 longitude: 113.9762333
 Slug: fh8k5bvrts
+short_description_tc: 大型地區醫院，提供全科急症、康復及日間服務。
+long_description_tc: 屯門醫院於1990年成立，為屯門、元朗和新界西北區的居民提供全面的急症和日間醫療服務。醫院積極推展社區護理的工作，建立多個服務中心，並組成專科外展隊，到病人家中和院舍進行探訪和提供醫療服務。
 ---
