Upload from GAS

--- a/_HAhospital/13.md
+++ b/_HAhospital/13.md
@@ -16,4 +16,5 @@ longitude: 114.12484872
 Slug: ru9uptas5r
 short_description_tc: 一間延續護理的醫院，提供老人服務，並為內科及矯形科病人提供復康及療養服務；透過社區老人評估小組為區內老人提供外展服務。
 long_description_tc: 醫院專門提供老人科延續護理服務，如為內科和骨科的長者病人提供復康和療養服務；此外，亦設立了社區老人評估小組以及老人科日間醫院。
+abbrev: FYKH
 ---
