--- a/_HAhospital/34.md
+++ b/_HAhospital/34.md
@@ -16,4 +16,5 @@ longitude: 114.21652643
 Slug: 8ue44646ib
 short_description_tc: 為中央療養服務輪候名冊的病人及嚴重殘疾病人提供護養服務的延續護理醫院。
 long_description_tc: 沙田慈氏護養院由香港慈氏安養院基金會成立，是一所延續護理醫院，為需要長期住院的嚴重傷殘人士以及中央輪候冊申請者提供護理服務。護養院以「家」的環境，為病人提供多項相關服務，其鼓勵病人自行管理自己的生活方式和活動。此外，護養院亦為與家人同住的傷殘人士提供紓緩服務；同時為他們提供中途住宿服務和其他支援，有助病人重新融入社區。
+abbrev: CHS
 ---
