--- a/_HAhospital/37.md
+++ b/_HAhospital/37.md
@@ -16,4 +16,5 @@ longitude: 114.2126804
 Slug: 1i4pysiqjm
 short_description_tc: 療養及復康延續護理醫院，亦提供精神科住院服務。
 long_description_tc: 沙田醫院是一間復康醫院，於1991 年投入服務，主要提供內科及老人科、紓緩治療科、外科、老人精神科及成人精神科，亦設有睡眠檢查室及提供精神科社區外展服務。
+abbrev: SH
 ---
