--- a/_HAhospital/4.md
+++ b/_HAhospital/4.md
@@ -16,4 +16,5 @@ longitude: 114.03150671
 Slug: 7q4z75v5qx
 short_description_tc: 提供基健及急症服務。
 long_description_tc: 長洲醫院座落於長洲，專為該區居民提供基層醫療、緊急和社區醫療服務。
+abbrev: SJH
 ---
