--- a/_HAhospital/42.md
+++ b/_HAhospital/42.md
@@ -18,4 +18,5 @@ short_description_tc: 全科醫院，提供急症及部份專科服務。
 long_description_tc: 天水圍醫院為新界西醫院聯網轄下第五間醫院，於2017年初起分階段提供服務。天水圍醫院現提供24小時急症服務、住院服務、專科門診、腎科透析、專職醫療及社康護理等服務。
 
 隨著各項服務陸續啟用，天水圍醫院將會成為天水圍區的主要醫療服務機構，屆時可減少居民跨區到聯網內其他醫院求診。
+abbrev: TSH
 ---
