--- a/_HAhospital/6.md
+++ b/_HAhospital/6.md
@@ -16,4 +16,5 @@ longitude: 114.19026433
 Slug: vvf9eegmhp
 short_description_tc: 提供基健及部份專科服務的社區醫院，包括內科、眼科、復康及療養服務。
 long_description_tc: 東華東院於1929年成立，並於1997年進行醫療服務重整，專門提供社區為本的全科、專科和日間醫療服務。此外，醫院亦與社區伙伴緊密合作，舉辦共同護理計劃、健康講座和各類外展活動，加強市民的健康意識。
+abbrev: TWE
 ---
