--- a/_HAhospital/15.md
+++ b/_HAhospital/15.md
@@ -16,4 +16,5 @@ longitude: 114.1886976
 Slug: 7gofaudwpd
 short_description_tc: 社區醫院，設有普通科和延續護理服務。
 long_description_tc: 香港佛教聯合會於1970年創立佛教醫院，本著佛陀慈悲的精神，為病人和社區提供全人照顧。現時服務涵蓋廣泛，包括住院和門診服務，是一間擁285張病床的社區醫院。
+abbrev: HKBH
 ---
