--- a/_HAhospital/21.md
+++ b/_HAhospital/21.md
@@ -16,4 +16,5 @@ longitude: 114.19657146
 Slug: 6toj32to8q
 short_description_tc: 非緊急醫院，提供不同專科的非緊急服務。
 long_description_tc: 聖母醫院於1961年由瑪利諾女修會成立，作為一間天主教醫院，尤其著重住院、門診和日間診療的病人，在生理、社交、心理和靈性上的需要。
+abbrev: OLMH
 ---
