--- a/_HAhospital/33.md
+++ b/_HAhospital/33.md
@@ -16,4 +16,5 @@ longitude: 114.21509866
 Slug: zi67adqtf6
 short_description_tc: 紓緩治療專科中心，提供住院及社區外展寧養服務。
 long_description_tc: 白普理寧養中心於1992年由善寧會成立，是本港首間為末期癌症病人提供專科寧養護理的院舍。除了以治療和護理方式紓緩病人痛楚外，院舍更在病房、甚至病人家中，提供情緒和心靈上的支援；同時與其他醫院合作，確保病人得到持續的照顧。此外，院舍亦為病人家屬提供全面的喪親輔導服務。
+abbrev: BH
 ---
