--- a/_HAhospital/38.md
+++ b/_HAhospital/38.md
@@ -16,4 +16,5 @@ longitude: 114.17463005
 Slug: 7y7h7fhxhh
 short_description_tc: 提供療養、復康支援的延續護理醫院，亦提供精神科住院服務。
 long_description_tc: 大埔醫院旨在為其他醫院轉介的長者、長期病患者、急症精神科病人以及中央護理輪候名冊申請者等，提供醫學評估、延續護理和綜合復康服務，也是本港三間脊髓損傷康復中心之一。醫院確保病人獲取優質和全面的服務，事事以病人為先，並致力改善社區的健康。大埔醫院與多個醫療服務機構和社區團體合作，推展健康和長期護理的計劃。
+abbrev: TPH
 ---
