--- a/_HAhospital/41.md
+++ b/_HAhospital/41.md
@@ -18,4 +18,5 @@ short_description_tc: 專為全港嚴重弱智成年病人而設的院舍。
 long_description_tc: 小欖醫院於1972年成立，是本港唯一一所專為16歲或以上嚴重智障人士提供全面綜合康復及療養服務的醫院。除了一般醫療和精神科治療外，亦提供護理服務、職業治療、物理治療、義肢及矯形服務、醫務社工服務及智能教育訓練。此外，醫院的外展隊透過家居探訪，協助正輪候弱智療養服務的人士持續在社區生活。 
 
 為進一步幫助病人的治療和康復，醫院營造一個寬敞舒適的環境，並設有整合的醫療設備，如特別坐椅、輔助儀器、病人吊運系統、多官能感官室、電腦輔助復康訓練室和復康花園等，優化病人護理。 
+abbrev: SLH
 ---
