--- a/_HAhospital/3.md
+++ b/_HAhospital/3.md
@@ -2,7 +2,7 @@
 cluster_eng: Hong Kong East Cluster
 institution_eng: Ruttonjee Hospital
 with_AE_service_eng: Yes
-address_eng: 266 Queen's Road East, Wan Chai, HK
+address_eng: 266 Queen\'s Road East, Wan Chai, HK
 cluster_tc: 港島東醫院聯網
 institution_tc: 律敦治醫院
 with_AE_service_tc: 是
