Upload from GAS

--- a/_HAhospital/4.md
+++ b/_HAhospital/4.md
@@ -13,8 +13,10 @@ with_AE_service_sc: 是
 address_sc: 长洲东湾长洲医院路
 latitude: 22.208059492
 longitude: 114.03150671
-Slug: 7q4z75v5qx
+slug: 7q4z75v5qx
 short_description_tc: 提供基健及急症服務。
 long_description_tc: 長洲醫院座落於長洲，專為該區居民提供基層醫療、緊急和社區醫療服務。
 abbrev: SJH
+title: 長洲醫院\nSt. John Hospital
+name: SJH
 ---
