--- a/_HAhospital/2.md
+++ b/_HAhospital/2.md
@@ -13,8 +13,10 @@ with_AE_service_sc: 是
 address_sc: 香港柴湾乐民道3 号
 latitude: 22.26998253
 longitude: 114.2367003
-Slug: qhy9f5a2jy
+slug: qhy9f5a2jy
 short_description_tc: 提供全面專科服務的地區性急症醫院。
 long_description_tc: 東區尤德夫人那打素醫院於1993年成立，是本港一所大型急症醫院，為港島東居民提供全面的專科服務。醫院以尤德夫人之名命名，其前身為建於一百年前的雅麗氏何妙麗那打素醫院，是本港首間以西方醫術治病的華人醫院。
 abbrev: PYN
+title: 東區尤德夫人那打素醫院\nPamela Youde Nethersole Eastern Hospital
+name: PYN
 ---
