--- a/_HAhospital/21.md
+++ b/_HAhospital/21.md
@@ -13,8 +13,10 @@ with_AE_service_sc: 否
 address_sc: 九龙黄大仙沙田坳道 118 号
 latitude: 22.345587576
 longitude: 114.19657146
-Slug: 6toj32to8q
+slug: 6toj32to8q
 short_description_tc: 非緊急醫院，提供不同專科的非緊急服務。
 long_description_tc: 聖母醫院於1961年由瑪利諾女修會成立，作為一間天主教醫院，尤其著重住院、門診和日間診療的病人，在生理、社交、心理和靈性上的需要。
 abbrev: OLMH
+title: 聖母醫院\nOur Lady of Maryknoll Hospital
+name: OLMH
 ---
