--- a/_HAhospital/29.md
+++ b/_HAhospital/29.md
@@ -13,8 +13,10 @@ with_AE_service_sc: 是
 address_sc: 大屿山东涌松仁路8号
 latitude: 22.282570845
 longitude: 113.93914094
-Slug: s16mw45n4r
+slug: s16mw45n4r
 short_description_tc: 於2013年9月開始分階段投入服務。服務範圍包括急症室、社區健康中心、專科門診及社區外展服務。
 long_description_tc: 北大嶼山醫院自二零一三年九月起投入服務。現時，醫院提供急症室服務、住院服務、日間護理服務，包括專科門診服務、社區健康中心、專職醫療服務及社康護理服務。此外，醫院亦設藥房、並提供放射診斷及病理化驗服務。
 abbrev: NLT
+title: 北大嶼山醫院\nNorth Lantau Hospital
+name: NLT
 ---
