--- a/_HAhospital/3.md
+++ b/_HAhospital/3.md
@@ -13,8 +13,10 @@ with_AE_service_sc: 是
 address_sc: 香港湾仔皇后大道东 266 号
 latitude: 22.275908631
 longitude: 114.17529276
-Slug: bubjcozpkh
+slug: bubjcozpkh
 short_description_tc: 社區醫院，提供急症及部份專科服務，包括內科、呼吸內科、老人科及外科。
 long_description_tc: 律敦治醫院提供緊急醫療服務及部份專科服務。醫院具有超過170年歷史，曾用作海員及軍事醫院，後期專門為肺結核病患者提供服務。1991年正式成為一間全科醫院。醫院大樓已重建，而服務範圍更貼合社區的需求。1998年，律敦治醫院與鄧肇堅醫院已進行管理合併，進一步節省資源和提高效率。
 abbrev: RH
+title: 律敦治醫院\nRuttonjee Hospital
+name: RH
 ---
