--- a/_HAhospital/7.md
+++ b/_HAhospital/7.md
@@ -13,8 +13,10 @@ with_AE_service_sc: 否
 address_sc: 香港黄竹坑黄竹坑径2 号
 latitude: 22.250965962
 longitude: 114.17591391
-Slug: 6we8t9hrox
+slug: 6we8t9hrox
 short_description_tc: 為需要長期護理的病人提供護養服務。
 long_description_tc: 黃竹坑醫院是黃竹坑老人服務綜合大樓的其中一部份，為轉介的長者提供延續護理、復康和療養服務。
 abbrev: WCH
+title: 黃竹坑醫院\nWong Chuk Hang Hospital
+name: WCH
 ---
