--- a/_HAhospital/9.md
+++ b/_HAhospital/9.md
@@ -13,8 +13,10 @@ with_AE_service_sc: 否
 address_sc: 香港薄扶林沙湾径7 号
 latitude: 22.269795326
 longitude: 114.12398579
-Slug: awgxbhmk9v
+slug: awgxbhmk9v
 short_description_tc: 提供全面復康服務。
 long_description_tc: 麥理浩復康院於1984年成立，當時的創辦機構為香港復康會。本院為身體殘障的病人提供全面和貼身的復康計劃，讓其重拾自信，再次融入社會。此外，本院亦為出院後的身體嚴重傷殘者，提供長期的護理服務。復康院與香港復康會及香港大學經常保持緊密聯繫，亦合作推動多項關於專科及以社區為本的復康服務。
 abbrev: MMRC
+title: 麥理浩復康院\nMacLehose Medical Rehabilitation Centre
+name: MMRC
 ---
